--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=acceloka_sandy;Username=sandy;Password=123"
   },
-  "AllowedHosts": "*",
   "Serilog": {
+    "Using": [
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": "Information",
     "WriteTo": [
       {
@@ -17,5 +16,12 @@
         }
       }
     ]
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
