fix: improved globalexceptionhandler, clean return error responses, validators and some endpoint handlers logic

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "launchBrowser": false,
       "applicationUrl": "http://localhost:5015",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development" //  ! kalau mau clean return error responses, ubah ke "Production"
       }
     },
     "https": {
